# EnergyDataAnalytics

./: pyproject.toml
TradingAnalytics/: tradingExample.ipynb  tradingExample.py
TradingAnalytics/Data/actual_production_per_plant/: 031125.csv  041125.csv  051125.csv  061125.csv  071125.csv  081125.csv  091125.csv
TradingAnalytics/Data/prices/: prices201125.csv
TradingAnalytics/Data/renewables/: offshore_wind2025.csv  onshore_wind2025.csv  solar2025.csv
