[tool.poetry]
name = "energydataanalytics"
version = "0.1.0"
description = "Example code for the Energy Data Analytics Code @ Energy & Finance Institute"
authors = ["PeteBaum <peter.baumgartl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
polars = "^1.35.2"
pandas = "^2.3.3"
pyarrow = "^22.0.0"
matplotlib = "^3.10.7"


[tool.poetry.group.dev.dependencies]
ipykernel = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
